--- a/mbed_app.json
+++ b/mbed_app.json
@@ -37,7 +37,10 @@
             "lora.phy": 0,
             "lora.device-eui": "{ 0x0F, 0xF0, 0xEE, 0x00, 0x00, 0x00, 0x02, 0x00 }",
             "lora.application-eui": "{ 0x70, 0xB3, 0xD5, 0x7E, 0xD0, 0x00, 0x85, 0xBE }",
-            "lora.application-key": "{ 0x70, 0xB3, 0xD5, 0x7E, 0xD0, 0x00, 0x85, 0xBE }"
+            "lora.application-key": "{ 0x70, 0xB3, 0xD5, 0x7E, 0xD0, 0x00, 0x85, 0xBE }",
+	    "lora.appskey": "{ 0x0F, 0x21, 0xD1, 0x2C, 0x97, 0x16, 0x2B, 0x12, 0xE1, 0x9F, 0xB4, 0x04, 0x2C, 0x9D, 0xC6, 0x01 }",
+	    "lora.nwkskey": "{ 0xEC, 0xCF, 0x3E, 0x35, 0x0D, 0x70, 0xF6, 0xD3, 0x51, 0xE3, 0x4C, 0xBE, 0x65, 0x8D, 0x55, 0x59 }",
+	    "lora.device-address": "0x260114B8" 
         },
 
         "K64F": {
