--- a/mbed_app.json
+++ b/mbed_app.json
@@ -6,8 +6,7 @@
         },
         "main_stack_size":     { "value": 4096 },
 
-        "lorawan-enabled":     { "value": false},
-
+        "lorawan-enabled":     { "value": false },
         "lora-spi-mosi":       { "value": "NC" },
         "lora-spi-miso":       { "value": "NC" },
         "lora-spi-sclk":       { "value": "NC" },
@@ -34,10 +33,10 @@
             "platform.default-serial-baud-rate": 115200,
             "lora.over-the-air-activation": true,
             "lora.duty-cycle-on": true,
-            "lora.phy": 0,
-            "lora.device-eui": "{ 0x0F, 0xF0, 0xEE, 0x00, 0x00, 0x00, 0x02, 0x00 }",
-            "lora.application-eui": "{ 0x70, 0xB3, 0xD5, 0x7E, 0xD0, 0x00, 0x85, 0xBE }",
-            "lora.application-key": "{ 0x70, 0xB3, 0xD5, 0x7E, 0xD0, 0x00, 0x85, 0xBE }",
+            "lora.phy": 0,      
+            "lora.device-eui": "{ 0x00, 0xF0, 0xF0, 0x0E, 0xE0, 0x00, 0x00, 0x20 }",
+            "lora.application-eui": "{ 0x70, 0xB3, 0xD5, 0x7E, 0xD0, 0x00, 0x85, 0xBE }",            
+            "lora.application-key": "{ 0x29, 0x29, 0xF2, 0xA4, 0xF2, 0xB4, 0x27, 0xBF, 0x50, 0x38, 0x3F, 0xDE, 0x23, 0x49, 0x07, 0x94 }",
 	    "lora.appskey": "{ 0x0F, 0x21, 0xD1, 0x2C, 0x97, 0x16, 0x2B, 0x12, 0xE1, 0x9F, 0xB4, 0x04, 0x2C, 0x9D, 0xC6, 0x01 }",
 	    "lora.nwkskey": "{ 0xEC, 0xCF, 0x3E, 0x35, 0x0D, 0x70, 0xF6, 0xD3, 0x51, 0xE3, 0x4C, 0xBE, 0x65, 0x8D, 0x55, 0x59 }",
 	    "lora.device-address": "0x260114B8" 
