--- a/mbed_app.json
+++ b/mbed_app.json
@@ -32,7 +32,7 @@
             "platform.stdio-baud-rate": 115200,
             "platform.default-serial-baud-rate": 115200,
             "lora.over-the-air-activation": true,
-            "lora.duty-cycle-on": true,
+            "lora.duty-cycle-on": false,
             "lora.phy": 0,      
             "lora.device-eui": "{ 0x00, 0xF0, 0xF0, 0x0E, 0xE0, 0x00, 0x00, 0x20 }",
             "lora.application-eui": "{ 0x70, 0xB3, 0xD5, 0x7E, 0xD0, 0x00, 0x85, 0xBE }",            
