Futile attemt to compile with platformio

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,10 +8,14 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html1
 
+[platformio]
+env_default = MTB_RAK811
+boards_dir = .
+src_dir = .
 
-[env:rak811]
+
+[env:MTB_RAK811]
 lib_dir = lib
-src_dir = src
 platform = ststm32
 board = MTB_RAK811
 framework=mbed
